--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@ body {
         <div data-fitter-happier-text>sandstroem</div>
         <div data-fitter-happier-text>sandstream</div>
         <div data-fitter-happier-text>săndstrēm</div>
+        <div data-fitter-happier-text>sandstream</div>
+        <div data-fitter-happier-text>sandstre.am</div>
       </section>
   <script src="assets/js/fitter-happier-text.js"></script>
    <script>
