--- a/lullabys.html
+++ b/lullabys.html
@@ -14,8 +14,8 @@ body {
   line-height: 1.5;
   padding: 1em 1.5em;
   margin: 0 auto;
-  color: rgba(255, 0, 0, 0);
-  background-color: rgba(1, 1, 1, 1);
+  color: white;
+  background-color: black;
 
 }
 </style>
