--- a/lullabys.html
+++ b/lullabys.html
@@ -14,8 +14,8 @@ body {
   line-height: 1.5;
   padding: 1em 1.5em;
   margin: 0 auto;
-  color: white;
-  background-color: black;
+  color: #FFFFFF;
+  background-color: #111111;
 
 }
 </style>
