--- a/lullabys.html
+++ b/lullabys.html
@@ -14,7 +14,7 @@ body {
   line-height: 1.5;
   padding: 1em 1.5em;
   margin: 0 auto;
-  color: #FFFFFF;
+  color: #AAAAAA;
   background-color: #111111;
 
 }
