--- a/lullabys.html
+++ b/lullabys.html
@@ -37,22 +37,29 @@ body {
       <section >
         <div id='slider' class='swipe'>
           <div class='swipe-wrap'>
-        <div data-fitter-happier-text>Lille Katt</div>
-        <div data-fitter-happier-text>Lille Katt</div>
-        <div data-fitter-happier-text>Lille söte katta</div>
-        <div data-fitter-happier-text>Vet du att</div>
-        <div data-fitter-happier-text>Vet du att</div>
-        <div data-fitter-happier-text>De är mörkt om natta</div>
-      </div>
-    </div>
+            <div>
+              <div data-fitter-happier-text>Lille Katt</div>
+              <div data-fitter-happier-text>Lille Katt</div>
+              <div data-fitter-happier-text>Lille söte katta</div>
+              <div data-fitter-happier-text>Vet du att</div>
+              <div data-fitter-happier-text>Vet du att</div>
+              <div data-fitter-happier-text>De är mörkt om natta</div>
+            </div>
+          </div>
+        </div>
 
-        <br><br>
-        <div data-fitter-happier-text>Lille gris</div>
-        <div data-fitter-happier-text>Lille gris</div>
-        <div data-fitter-happier-text>Lille söte grisen</div>
-        <div data-fitter-happier-text>Om du frys</div>
-        <div data-fitter-happier-text>Om du frys</div>
-        <div data-fitter-happier-text>Gör då eld i spisen</div>
+        <div id='slider' class='swipe'>
+          <div class='swipe-wrap'>
+            <div>
+              <div data-fitter-happier-text>Lille gris</div>
+              <div data-fitter-happier-text>Lille gris</div>
+              <div data-fitter-happier-text>Lille söte grisen</div>
+              <div data-fitter-happier-text>Om du frys</div>
+              <div data-fitter-happier-text>Om du frys</div>
+              <div data-fitter-happier-text>Gör då eld i spisen</div>
+            </div>
+          </div>
+        </div>
       </section>
   <script src="assets/js/fitter-happier-text.js"></script>
   <script src="assets/js/Swipe-master/swipe.js"></script>
