--- a/lullabys.html
+++ b/lullabys.html
@@ -44,15 +44,69 @@ body {
               <div data-fitter-happier-text>Vet du att</div>
               <div data-fitter-happier-text>Vet du att</div>
               <div data-fitter-happier-text>De är mörkt om natta</div>
-            </div>
-            <div>
+              <br><br>
               <div data-fitter-happier-text>Lille gris</div>
               <div data-fitter-happier-text>Lille gris</div>
               <div data-fitter-happier-text>Lille söte grisen</div>
               <div data-fitter-happier-text>Om du frys</div>
               <div data-fitter-happier-text>Om du frys</div>
               <div data-fitter-happier-text>Gör då eld i spisen</div>
+              <br><br>
+              <div data-fitter-happier-text>Lille ko</div>
+              <div data-fitter-happier-text>Lille ko</div>
+              <div data-fitter-happier-text>Lille söte koa</div>
+              <div data-fitter-happier-text>De va ho</div>
+              <div data-fitter-happier-text>De va ho</div>
+              <div data-fitter-happier-text>Ho som sket på broa</div>
+              <br><br>
+              <div data-fitter-happier-text>Lille mor</div>
+              <div data-fitter-happier-text>Lille mor</div>
+              <div data-fitter-happier-text>Lille söte mora</div>
+              <div data-fitter-happier-text>Hon fick skor</div>
+              <div data-fitter-happier-text>Hon fck skor</div>
+              <div data-fitter-happier-text>Men de var för stora</div>
+              <br><br>
+              <div data-fitter-happier-text>Lille far</div>
+              <div data-fitter-happier-text>Lille far</div>
+              <div data-fitter-happier-text>Lille söte faren</div>
+              <div data-fitter-happier-text>En sån karl</div>
+              <div data-fitter-happier-text>En sån karl</div>
+              <div data-fitter-happier-text>De är tur vi har en</div>
+              <br><br>
+              <div data-fitter-happier-text>Lille jag</div>
+              <div data-fitter-happier-text>Lille jag</div>
+              <div data-fitter-happier-text>Lille söte Ida</div>
+              <div data-fitter-happier-text>Jag vill ha</div>
+              <div data-fitter-happier-text>Jag vill ha</div>
+              <div data-fitter-happier-text>Rotemos till midddag</div>
             </div>
+            <div>
+              <div data-fitter-happier-text>Du ska inte tro det blir sommar</div>
+              <div data-fitter-happier-text>Ifall inte nån sätter fart</div>
+              <div data-fitter-happier-text>På sommarn och gör lite somrigt</div>
+              <div data-fitter-happier-text>Då kommer blommorna snart</div>
+              <div data-fitter-happier-text>Jag gör så att blommorna blommar</div>
+              <div data-fitter-happier-text>Jag gör hela kohagen grön</div>
+              <div data-fitter-happier-text>Och nu så har sommaren kommit</div>
+              <div data-fitter-happier-text>För jag har just tagit bort snön</div>
+              <br><br>
+              <div data-fitter-happier-text>Jag gör mycket vatten i bäcken</div>
+              <div data-fitter-happier-text>Så där så det hoppar och far</div>
+              <div data-fitter-happier-text>Jag gör fullt med svalor som flyger</div>
+              <div data-fitter-happier-text>Och myggor som svalorna tar</div>
+              <div data-fitter-happier-text>Jag gör löven nya på träden</div>
+              <div data-fitter-happier-text>Och små fågelbon här och där</div>
+              <div data-fitter-happier-text>Jag gör himlen vacker om kvällen</div>
+              <div data-fitter-happier-text>För jag gör den alldeles skär</div>
+              <br><br>
+              <div data-fitter-happier-text>Och smultron det gör jag åt barna</div>
+              <div data-fitter-happier-text>För det tycker jag dom kan få</div>
+              <div data-fitter-happier-text>Och andra små roliga saker</div>
+              <div data-fitter-happier-text>Som passar när barna är små</div>
+              <div data-fitter-happier-text>Och jag gör så roliga ställen</div>
+              <div data-fitter-happier-text>Där barna kan springa omkring</div>
+              <div data-fitter-happier-text>Då blir barna fulla med sommar</div>
+              <div data-fitter-happier-text>Och bena blir fulla med spring</div>
           </div>
         </div>
       </section>
