--- a/lullabys.html
+++ b/lullabys.html
@@ -71,14 +71,14 @@ body {
               <div data-fitter-happier-text>Lille söte faren</div>
               <div data-fitter-happier-text>En sån karl</div>
               <div data-fitter-happier-text>En sån karl</div>
-              <div data-fitter-happier-text>De är tur vi har en</div>
+              <div data-fitter-happier-text>De är tur vi har'en</div>
               <br><br>
               <div data-fitter-happier-text>Lille jag</div>
               <div data-fitter-happier-text>Lille jag</div>
               <div data-fitter-happier-text>Lille söte Ida</div>
               <div data-fitter-happier-text>Jag vill ha</div>
               <div data-fitter-happier-text>Jag vill ha</div>
-              <div data-fitter-happier-text>Rotemos till midddag</div>
+              <div data-fitter-happier-text>Rotemos till middda'</div>
             </div>
             <div>
               <div data-fitter-happier-text>Du ska inte tro det blir sommar</div>
