Added Bravura Fonte

--- a/lullabys.html
+++ b/lullabys.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui">
 </head>
 <style>
+@font-face {
+font-family: Bravura;
+src: url("assets/js/Bravura.otf") format("opentype");
+}
+
 body {
   font-family: 'Avenir Next', 'AvenirNext-SemiBold', 'Futura-Medium', Futura, 'Futura Std', 'Trebuchet MS', Helvetica, Arial, sans-serif;
   font-weight: 700;
@@ -16,6 +21,11 @@ body {
   margin: 0 auto;
   color: #AAAAAA;
   background-color: #111111;
+}
+
+.notes {
+  font-family: 'Avenir Next'
+  color: #AAAAAA;
 }
 
 .swipe {
@@ -44,7 +54,7 @@ body {
               <div data-fitter-happier-text>Vet du att</div>
               <div data-fitter-happier-text>Vet du att</div>
               <div data-fitter-happier-text>De är mörkt om natta</div>
-              <br><br>
+              <div class="notes">abced</div>
               <div data-fitter-happier-text>Lille gris</div>
               <div data-fitter-happier-text>Lille gris</div>
               <div data-fitter-happier-text>Lille söte grisen</div>
