--- a/lullabys.html
+++ b/lullabys.html
@@ -6,9 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui">
 </head>
 <style>
+
 @font-face {
 font-family: Bravura;
-src: url("assets/js/Bravura.otf") format("opentype");
+src: url( /assets/js/BravuraText.eot ); /* IE */
+src: url( /assets/js/BravuraText.otf ) format("opentype");
 }
 
 body {
