--- a/lullabys.html
+++ b/lullabys.html
@@ -56,7 +56,7 @@ body {
               <div data-fitter-happier-text>Vet du att</div>
               <div data-fitter-happier-text>Vet du att</div>
               <div data-fitter-happier-text>De är mörkt om natta</div>
-              <div class="notes">abcedf</div>
+              <div class="notes">abcedf</div>
               <div data-fitter-happier-text>Lille gris</div>
               <div data-fitter-happier-text>Lille gris</div>
               <div data-fitter-happier-text>Lille söte grisen</div>
