--- a/lullabys.html
+++ b/lullabys.html
@@ -16,7 +16,7 @@ src: url( /assets/js/BravuraText.otf ) format("opentype");
 body {
   font-family: 'Avenir Next', 'AvenirNext-SemiBold', 'Futura-Medium', Futura, 'Futura Std', 'Trebuchet MS', Helvetica, Arial, sans-serif;
   font-weight: 700;
-  text-transform: uppercase;
+  /*text-transform: uppercase;*/
   letter-spacing: .1em;
   line-height: 1.5;
   padding: 1em 1.5em;
