--- a/lullabys.html
+++ b/lullabys.html
@@ -49,7 +49,7 @@ body {
       <section >
         <div id='slider' class='swipe'>
           <div class='swipe-wrap'>
-            <div width="100%">
+            <div data-fitter-happier-text>
               <div>Lille katt, lille katt</div>
               <div>Lille söte katta</div>
               <div>Vet du att, vet du att</div>
