--- a/ngcs/chat_deloitte.html
+++ b/ngcs/chat_deloitte.html
@@ -11,7 +11,8 @@
 
     <!-- This loads Intelcoms default light-colored stylesheet -->
     <!--<link rel="stylesheet" title="IntelecomChatCustomCss" href="C:\Users\SimeonTopalov\OneDrive - Puzzel AS\Documentation\KML\Chat/intelecomChat.css" type="text/css" />
-    --><link rel="stylesheet" href="https://chat.puzzel.com/Content/Client/css/intelecom-light.css" type="text/css" />
+    <link rel="stylesheet" href="https://chat.puzzel.com/Content/Client/css/intelecom-light.css" type="text/css" />-->
+<link rel="stylesheet" href="https://chat.puzzel.com/Content/Client/css/intelecom-gray.css" type="text/css" />
     <!-- This loads Intelcoms default dark-colored stylesheet -->
     <!-- link rel="stylesheet" title="IntelecomChatCustomCss" href="https://chat.puzzel.com/Content/Client/css/intelecom-gray.css" type="text/css" /-->
         <!--/----------------------------------------------------------------------------/-->
