--- a/ngcs/chat_deloitte.html
+++ b/ngcs/chat_deloitte.html
@@ -3,19 +3,18 @@
 <html>
 
 <head>
-
     <meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=yes,height=device-height" />
+	  <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=yes,height=device-height" />
 
     <!--/----------------------------------------------------------------------------/-->
 
     <!-- This loads Intelcoms default light-colored stylesheet -->
     <!--<link rel="stylesheet" title="IntelecomChatCustomCss" href="C:\Users\SimeonTopalov\OneDrive - Puzzel AS\Documentation\KML\Chat/intelecomChat.css" type="text/css" />
     <link rel="stylesheet" href="https://chat.puzzel.com/Content/Client/css/intelecom-light.css" type="text/css" />-->
-<link rel="stylesheet" href="https://chat.puzzel.com/Content/Client/css/intelecom-gray.css" type="text/css" />
     <!-- This loads Intelcoms default dark-colored stylesheet -->
-    <!-- link rel="stylesheet" title="IntelecomChatCustomCss" href="https://chat.puzzel.com/Content/Client/css/intelecom-gray.css" type="text/css" /-->
-        <!--/----------------------------------------------------------------------------/-->
+    <link rel="stylesheet" title="IntelecomChatCustomCss" href="https://chat.puzzel.com/Content/Client/css/intelecom-gray.css" type="text/css" />
+
+    <!--/----------------------------------------------------------------------------/-->
 
     <!-- This loads jquery if you don’t already have it installed -->
     <!--[if gte IE 9]><!-->
