--- a/ngcs/chat_deloitte.html
+++ b/ngcs/chat_deloitte.html
@@ -38,13 +38,14 @@
     <!--/----------------------------------------------------------------------------/-->
 
 	<!-- customize buttons and header-->
-	<style>	 .intelecomchatstarter {border: 4px solid #eb1562; width: 80px; height: 80px;}</style>
-    <!--style>
-		 .intelecomchatheader {background-color:#eb1562;}
-		 .intelecomchat__button {background:#eb1562;}
-		 .intelecomchatdialog {height: 200px;}
-		 .intelecomStarterRight {right: 30px;}
-	</style-->
+	<style>	 .intelecomchatstarter {border: 6px solid #000; width: 40px; height: 40px;}</style>
+    <style>
+		 .intelecomchatheader {background-color:#000;}
+		 .intelecomchat__button {background:#000;}
+		 .intelecomchatdialog {height: 400px;}
+		 .intelecomStarterRight {right: 60px;}
+     		 .intelecomStarterBottom {bottom: 20px;}
+	</style>
 
     </head>
 <body>
@@ -85,12 +86,14 @@
                 //      delayStarterSeconds: 0, //delays the chat starter circle
                 //      showStarterWhenMinimized: true, //displays the chat starter circle
                 //      horizontalStarterPosition: 'right', //position the chat starter circle
-                //      verticalStarterPosition: 'middle', // position the chat starter circle
+
+
+                      verticalStarterPosition: 'bottom', // position the chat starter circle
                 //      chatlink: '.chatstarter', //default class for chat button link
                 //      horizontalChatPosition: 'right', // positions the chat window
                 //      verticalChatPosition: 'bottom', // positions the chat window
-                //      draggable: true, //enables user to move window
-                //      resizable: true, //enables user to resize window
+                      draggable: true, //enables user to move window
+                      resizable: true, //enables user to resize window
                 //      nickName: '', //can be added from the web page
                 //      chatId: '', //can be added from the web page
                 //      chatIssue: '', //can be added from the web page
