--- a/ngcs/index.html
+++ b/ngcs/index.html
@@ -8,14 +8,14 @@
         <title>Grayscale - Start Bootstrap Theme</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Puzzel style -->
-        <link rel="stylesheet" title="IntelecomChatCustomCss" href="https://chat.puzzel.com/Content/Client/css/intelecom-gray.css" type="text/css" />
+          <link rel="stylesheet" title="IntelecomChatCustomCss" href="https://chat.puzzel.com/Content/Client/css/intelecom-gray.css" type="text/css" />
         <!-- Puzzel customize buttons and header-->
         <style>
-           .intelecomchatstarter {border: 6px solid #fff; width: 80px; height: 80px; background: #ccc;}
+           .intelecomchatstarter {border: 4px solid #64a19d; width: 60px; height: 60px; background: #000; background-image: url("assets/img/robot_avatar.png")}
            .intelecomchatheader {background-color:#000;}
-           .intelecomchat__button {background:#ccc;}
-           .intelecomchatdialog {height: 400px;}
-           .intelecomStarterRight {right: 60px;}
+           .intelecomchat__button {background:#000;}
+           .intelecomchatdialog {height: 300px; border: 0px;}
+           .intelecomStarterRight {right: 20px;}
           .intelecomStarterBottom {bottom: 20px;}
         </style>
         <!-- Font Awesome icons (free version)-->
@@ -50,6 +50,7 @@
             <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
                     <h1 class="mx-auto my-0 text-uppercase">Next Generation</h1>
+                    <h1 class="mx-auto my-0 text-uppercase">Customer Service</h1>
                     <h2 class="text-white-50 mx-auto mt-2 mb-5">Empower your Customer Service with AI.</h2>
                     <a class="btn btn-primary js-scroll-trigger" href="#about">Get Started</a>
                 </div>
@@ -182,7 +183,7 @@
         <!-- Third party plugin JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
         <!-- Puzzel JS -->
-        <script src="https://chat.puzzel.com/Content/Client/js/jquery-latest.min.js"></script>
+        <!--script src="https://chat.puzzel.com/Content/Client/js/jquery-latest.min.js"></script-->
         <script src="https://chat.puzzel.com/Content/Client/js/jquery-intelecomchat.libs.latest.min.js"></script>
         <script src="https://chat.puzzel.com/Content/Client/js/jquery-intelecomchat.latest.min.js"></script>
         <script>
