--- a/ngcs/index.html
+++ b/ngcs/index.html
@@ -91,7 +91,7 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Boost.ai</h4>
+                                    <h4 class="text-white">Boost.ai - Chatbot</h4>
                                     <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
                                     <hr class="d-none d-lg-block mb-0 mr-0" />
                                 </div>
