--- a/ngcs/index.html
+++ b/ngcs/index.html
@@ -171,7 +171,7 @@
                                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Address</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+                                <div class="small text-black-50">Rhensgatan 11, 113 57 Stockholm</div>
                             </div>
                         </div>
                     </div>
@@ -181,7 +181,7 @@
                                 <i class="fas fa-envelope text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Email</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50"><a href="#!">hello@yourdomain.com</a></div>
+                                <div class="small text-black-50"><a href="#!">hello@nextgenecustserv.se</a></div>
                             </div>
                         </div>
                     </div>
@@ -191,7 +191,7 @@
                                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Phone</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50">+1 (555) 902-8832</div>
+                                <div class="small text-black-50">6 46 (0)75-246 20 00</div>
                             </div>
                         </div>
                     </div>
