--- a/ngcs/index.html
+++ b/ngcs/index.html
@@ -69,7 +69,7 @@
                         </p>
                     </div>
                 </div>
-                <img class="img-fluid" src="assets/img/money.png" alt="" />
+                <img class="img-fluid" src="assets/img/customer.png" alt="" />
             </div>
         </section>
         <!-- Projects-->
