--- a/ngcs/index.html
+++ b/ngcs/index.html
@@ -5,18 +5,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Grayscale - Start Bootstrap Theme</title>
+        <title>NGCS - Bootstrap Ypur Customer experiencee</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Puzzel style -->
           <link rel="stylesheet" title="IntelecomChatCustomCss" href="https://chat.puzzel.com/Content/Client/css/intelecom-gray.css" type="text/css" />
         <!-- Puzzel customize buttons and header-->
         <style>
-           .intelecomchatstarter {border: 4px solid #64a19d; width: 60px; height: 60px; background: #000; background-image: url("assets/img/robot_avatar.png")}
+           .intelecomchatstarter {border: 4px solid #86F200; width: 60px; height: 60px; background: #000; background-image: url("assets/img/robot_avatar.png")}
            .intelecomchatheader {background-color:#000;}
            .intelecomchat__button {background:#000;}
-           .intelecomchatdialog {height: 300px; border: 0px;}
+           .intelecomchatdialog {border: 0px; margin-right: 100px;}
            .intelecomStarterRight {right: 20px;}
           .intelecomStarterBottom {bottom: 20px;}
+          .intelecomchat_infostatelamp_connected {background: #86F200;}
         </style>
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
@@ -249,8 +250,8 @@
                    //      chatlink: '.chatstarter', //default class for chat button link
                    //      horizontalChatPosition: 'right', // positions the chat window
                    //      verticalChatPosition: 'bottom', // positions the chat window
-                         draggable: true, //enables user to move window
-                         resizable: true, //enables user to resize window
+                       draggable: false, //enables user to move window
+                        resizable: false, //enables user to resize window
                    //      nickName: '', //can be added from the web page
                    //      chatId: '', //can be added from the web page
                    //      chatIssue: '', //can be added from the web page
