typo and images

--- a/ngcs/index.html
+++ b/ngcs/index.html
@@ -18,6 +18,7 @@
            .intelecomStarterRight {right: 20px;}
           .intelecomStarterBottom {bottom: 20px;}
           .intelecomchat_infostatelamp_connected {background: #86F200;}
+          .intelecomchatinner textarea {border: 1px solid #86F200;}
         </style>
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
@@ -64,8 +65,8 @@
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-white mb-4">Built with the customer experince in focus.</h2>
                         <p class="text-white-50">
-                          With the focus on the understanding the user and know the sentiment. The user experience are but i the first room.
-                          This demo will show the true power of understanding tthe customer journey and how technologies can emphazie the experience.
+                          A solution that understands the customers intent and has a deep understanding of the customer sentiment in real-time. The user experience is but in the first room.
+                          This demo will show the real power of understanding the customer journey and how technologies can emphasize the experience.
                               <p><button class="chatstarter btn btn-primary mx-auto" classname="startChat">Try now</button></p>
                         </p>
                     </div>
@@ -124,7 +125,7 @@
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
                                     <h4 class="text-white">Puzzel</h4>
-                                    <p class="mb-0 text-white-50">Contact center solution handeling the realtime converartion. Glueing the Agent expericen and customer experinece.</p>
+                                    <p class="mb-0 text-white-50">Contact center solution handling the realtime conversation and glues together the Agent Experience and Customer Experience.</p>
                                     <hr class="d-none d-lg-block mb-0 mr-0" />
                                 </div>
                             </div>
