typo and images

--- a/ngcs/index.html
+++ b/ngcs/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>NGCS - Bootstrap Ypur Customer experiencee</title>
+        <title>Digital Workforce - Bootstrap Your Customer experiencee</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Puzzel style -->
           <link rel="stylesheet" title="IntelecomChatCustomCss" href="https://chat.puzzel.com/Content/Client/css/intelecom-gray.css" type="text/css" />
