typo and images

--- a/ngcs/index.html
+++ b/ngcs/index.html
@@ -194,7 +194,7 @@
                                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Phone</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50">6 46 (0)75-246 20 00</div>
+                                <div class="small text-black-50">+46 (0)75 246 20 00</div>
                             </div>
                         </div>
                     </div>
