typo and images

--- a/ngcs/index.html
+++ b/ngcs/index.html
@@ -174,7 +174,7 @@
                                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Address</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50">Rhensgatan 11, 113 57 Stockholm</div>
+                                <div class="small text-black-50">Rehnsgatan 11, 113 57 Stockholm</div>
                             </div>
                         </div>
                     </div>
