typo and images

--- a/ngcs/index.html
+++ b/ngcs/index.html
@@ -51,9 +51,9 @@
         <header class="masthead">
             <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
-                    <h1 class="mx-auto my-0 text-uppercase">Next Generation</h1>
-                    <h1 class="mx-auto my-0 text-uppercase">Customer Service</h1>
-                    <h2 class="text-white-50 mx-auto mt-2 mb-5">Empower your Customer Service with AI.</h2>
+                    <h1 class="mx-auto my-0 text-uppercase">The Digital Workforce</h1>
+                    <!--h1 class="mx-auto my-0 text-uppercase">Customer Service</h1-->
+                    <h2 class="text-white-50 mx-auto mt-2 mb-5">Next generation customer service empowered with AI.</h2>
                     <a class="btn btn-primary js-scroll-trigger" href="#about">Read more</a>
                 </div>
             </div>
