--- a/ngcs/index.html
+++ b/ngcs/index.html
@@ -20,6 +20,22 @@
           .intelecomchat_infostatelamp_connected {background: #86F200;}
           .intelecomchatinner textarea {border: 1px solid #86F200;}
           .intelecomchaticon-thumbs-up-solid {background-color: red;}
+          .intelecomoption form button {
+              background: #86F200;
+              border: 1px solid #28a745;
+              border-radius: 15px;
+              margin-bottom: 15px;
+              vertical-align: middle;
+              padding: 10px 0 10px 0;
+              display: inline-block;
+              width: 100%;
+              overflow: hidden;
+              text-align: left;
+              font-size: 1em;
+              text-transform: none;
+              font-weight: 500;
+              color: #2f312e;
+          }
 
 
         </style>
