--- a/ngcs/index.html
+++ b/ngcs/index.html
@@ -8,23 +8,24 @@
         <title>Digital Workforce - Bootstrap Your Customer experiencee</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Puzzel style -->
-          <link rel="stylesheet" title="IntelecomChatCustomCss" href="https://chat.puzzel.com/Content/Client/css/intelecom-gray.css" type="text/css" />
+          <link rel="stylesheet" title="IntelecomChatCustomCss" href="css/puzzel.css" type="text/css" />
         <!-- Puzzel customize buttons and header-->
         <style>
-           .intelecomchatstarter {border: 4px solid #86F200; width: 60px; height: 60px; background: #000; background-image: url("assets/img/robot_avatar.png")}
+        /*   .intelecomchatstarter {border: 4px solid #86F200; width: 60px; height: 60px; background: #000; background-image: url("assets/img/robot_avatar.png")}*/
            .intelecomchatheader {background-color:#000;}
            .intelecomchat__button {background:#000;}
            .intelecomchatdialog {border: 0px; margin-right: 100px;}
            .intelecomStarterRight {right: 20px;}
           .intelecomStarterBottom {bottom: 20px;}
           .intelecomchat_infostatelamp_connected {background: #86F200;}
-          .intelecomchatinner textarea {border: 1px solid #86F200;}
-          .intelecomchaticon-thumbs-up-solid {background-color: red;}
+          .intelecomchat_infostatelamp_queue {background: #FDD300;)
+          .intelecomoption {max-width: 80%;}
+          /*.intelecomchaticon-cancel:active {border: none;}
           .intelecomoption form button {
               background: #86F200;
-              border: 1px solid #28a745;
-              border-radius: 15px;
-              margin-bottom: 15px;
+              border: 5px solid #28a745;
+              border-radius: 5px;
+              margin-bottom: 5px;
               vertical-align: middle;
               padding: 10px 0 10px 0;
               display: inline-block;
@@ -34,7 +35,7 @@
               font-size: 1em;
               text-transform: none;
               font-weight: 500;
-              color: #2f312e;
+              color: #2f312e;*/
           }
 
 
