--- a/ngcs/index.html
+++ b/ngcs/index.html
@@ -249,7 +249,7 @@
         <!-- Puzzel JS -->
         <!--script src="https://chat.puzzel.com/Content/Client/js/jquery-latest.min.js"></script-->
         <script src="https://chat.puzzel.com/Content/Client/js/jquery-intelecomchat.libs.latest.min.js"></script>
-        <script src="https://chat.puzzel.com/Content/Client/js/jquery-intelecomchat.latest.min.js"></script>
+        <script src="js/jquery-intelecomchat.latest.min.js"></script>
 
         <script>
            $(document).ready(function() {
