--- a/ngcs/index.html
+++ b/ngcs/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, target-densityDpi=device-dpi" />
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Digital Workforce - Bootstrap Your Customer experiencee</title>
@@ -12,10 +13,13 @@
         <!-- Puzzel customize buttons and header-->
         <style>
         /*   .intelecomchatstarter {border: 4px solid #86F200; width: 60px; height: 60px; background: #000; background-image: url("assets/img/robot_avatar.png")}*/
-           .intelecomchatheader {background-color:#000;}
-           .intelecomchat__button {background:#000;}
-           .intelecomchatdialog {border: 0px; margin-right: 100px;}
-           .intelecomStarterRight {right: 20px;}
+          .intelecomchatheader {background-color:#343a40}
+          .intelecomchat__button {background:#000;}
+          .intelecomchatdialog {
+            border-radius: 10px;
+            border: 0px solid #fff;
+          }
+          .intelecomStarterRight {right: 20px;}
           .intelecomStarterBottom {bottom: 20px;}
           .intelecomchat_infostatelamp_connected {background: #86F200;}
           .intelecomchat_infostatelamp_queue {background: #FDD300;)
