--- a/ngcs/index.html
+++ b/ngcs/index.html
@@ -13,11 +13,12 @@
         <!-- Puzzel customize buttons and header-->
         <style>
         /*   .intelecomchatstarter {border: 4px solid #86F200; width: 60px; height: 60px; background: #000; background-image: url("assets/img/robot_avatar.png")}*/
-          .intelecomchatheader {background-color:#343a40}
+          .intelecomchatheader {background-color:#393939;}
           .intelecomchat__button {background:#000;}
           .intelecomchatdialog {
             border-radius: 10px;
             border: 0px solid #fff;
+            background: ##393939;
           }
           .intelecomStarterRight {right: 20px;}
           .intelecomStarterBottom {bottom: 20px;}
