--- a/ngcs/index.html
+++ b/ngcs/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, target-densityDpi=device-dpi" />
+        <!--meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" /-->
+        <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, target-densityDpi=device-dpi, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Digital Workforce - Bootstrap Your Customer experiencee</title>
@@ -19,30 +19,19 @@
             border-radius: 10px;
             border: 0px solid #fff;
             background: ##393939;
+            margin: -20px 0px 0px -20px !important;
+          }
+          @media (max-width: 500px) {
+          .intelecomchatdialog {
+            width: 98% !important;
+            margin: 10px 1% 0px 1% !important;
+          }
           }
           .intelecomStarterRight {right: 20px;}
           .intelecomStarterBottom {bottom: 20px;}
           .intelecomchat_infostatelamp_connected {background: #86F200;}
           .intelecomchat_infostatelamp_queue {background: #FDD300;)
           .intelecomoption {max-width: 80%;}
-          /*.intelecomchaticon-cancel:active {border: none;}
-          .intelecomoption form button {
-              background: #86F200;
-              border: 5px solid #28a745;
-              border-radius: 5px;
-              margin-bottom: 5px;
-              vertical-align: middle;
-              padding: 10px 0 10px 0;
-              display: inline-block;
-              width: 100%;
-              overflow: hidden;
-              text-align: left;
-              font-size: 1em;
-              text-transform: none;
-              font-weight: 500;
-              color: #2f312e;*/
-          }
-
 
         </style>
         <!-- Font Awesome icons (free version)-->
