--- a/ngcs/index.html
+++ b/ngcs/index.html
@@ -7,20 +7,18 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Digital Workforce - Bootstrap Your Customer experiencee</title>
+
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Puzzel style -->
-          <link rel="stylesheet" title="IntelecomChatCustomCss" href="css/puzzel.css" type="text/css" />
+        <link rel="stylesheet" title="IntelecomChatCustomCss" href="css/puzzel.css" type="text/css" />
+                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/all.min.js" />
+
         <!-- Puzzel customize buttons and header-->
         <style>
+
         /*   .intelecomchatstarter {border: 4px solid #86F200; width: 60px; height: 60px; background: #000; background-image: url("assets/img/robot_avatar.png")}*/
-          .intelecomchatheader {background-color:#393939;}
+
           .intelecomchat__button {background:#000;}
-          .intelecomchatdialog {
-            border-radius: 10px;
-            border: 0px solid #fff;
-            background: ##393939;
-            margin: -20px 0px 0px -20px !important;
-          }
           @media (max-width: 500px) {
           .intelecomchatdialog {
             width: 98% !important;
@@ -88,6 +86,7 @@
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-white mb-4">Built with the customer experince in focus.</h2>
+
                         <p class="text-white-50">
                           A solution that understands the customers intent and has a deep understanding of the customer sentiment in real-time. The user experience is but in the first room.
                           This demo will show the real power of understanding the customer journey and how technologies can emphasize the experience.
@@ -286,21 +285,21 @@
                    //      altQueueKey: '', //alternative queue to check for available agents
                    //      languageCode: 'EN', //language settings (NO, SE, DK, EN)
            //		maxinfoMessageLength: 30, // restirct length of infomessage in the top. Could be adjusted when with of chat is larger than default.
-                   //      showIntro: false, //to show intro text field at initiation
-                   //      showAgentLoggedOnInIntro: false, //include "agents logged on" in intro
+                    //     showIntro: true, //to show intro text field at initiation
+                    //    showAgentLoggedOnInIntro: true, //include "agents logged on" in intro
                    //      showAgentActiveInIntro: false, //include "active agents" in intro
-                   //      showNumberInQueueInIntro: false, //include "number in queue" in intro
+                  //     showNumberInQueueInIntro: false, //include "number in queue" in intro
                    //      showVariablesInIntro: true, //include "variables" in intro
                    //      msgWelcomeHeader: '', //text message
-                   //      msgWelcome: '', // text message
-                   //      msgWelcomeFull: '', // text message
+                  //       msgWelcome: 'Hej', // text message
+                  //      msgWelcomeFull: 'Fullt', // text message
                    //      msgWelcomeEmpty: '', // text message
                    //      msgWelcomePause: '', // text message
                    //      msgReject: '', // text message
                    //      msgGoodbyeHeader: '', // text message
                    //      msgGoodbye: '', // text message
                    //      variables: {}, //variables to include in CRM popup
-                   //      showSendEmail: true, //allows to show email option
+                         showSendEmail: false, //allows to show email option
                    //      emailSubject: 'my email subject text', //subject text to show in email
                    //      fromEmailDisplayName: 'Your Companies Name', //display name
            //		emailPreText: 'Hello.[br][br]Thank you for speaking to us earlier. Here is a transcript of the conversation.',
@@ -323,7 +322,7 @@
            //		surveyMaxScore: 5,
            //		surveyMinScore: 1,
            //		surveyType: 'star',
-           //		startTextFromBottom: false,
+           		startTextFromBottom: true,
            //		msgSurveyQuestion: '',
            //		msgSurveyHeader: '',
            //		startChatImmediately: false,
